# Runescape-perk-solver

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  build.sh  convert-png-to-bin.py  convert-png-to-icon.py  data.json  ffi_test.py  perk_solver.code-workspace
benches/: my_benchmark.rs
src/: component_prices.lua  component_prices.rs  definitions.rs  dice.rs  ffi.rs  gizmo_cost_thresholds.rs  jagex_sort.rs  lib.rs  main.rs  perk_values.rs  prelude.rs  result.rs  utils.rs
src/definitions/: args.rs  budget.rs  data.rs  gizmo.rs  material_name.rs  perk.rs  perk_name.rs
src/gui/: args.rs  main.rs  numeric_input.rs  prelude.rs  prices_tab.rs  result.rs  utils.rs  wiki.rs
src/gui/args/: numeric_input.rs
src/gui/css/: common.css
src/prelude/: args.rs  budget.rs  data.rs  gizmo.rs  material_name.rs  perk.rs  perk_name.rs
src/prelude/data/: prelude.rs  stack_map.rs
src/prelude/data/prelude/: stack_vec.rs
