[package]
name = "perk_solver"
version = "1.0.0"
edition = "2021"
authors = ["Pieter Partous <pieter.partous@outlook.com>"]
description = "Finds optimal material combination for a given gizmo"
repository = "https://github.com/CephHunter/Runescape-perk-solver"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "4.0.23", features = ["derive"] }
colored = "2.0.0"
derive_more = "0.99.17"
howlong = "0.1.7"
indicatif = "0.17.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
len-trait = "0.6.1"
num_cpus = "1.15.0"
once_cell = "1.17.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.91"
smallvec = "1.10.0"
test-case = "2.2.2"
threadpool = "1.8.1"
tokio = { version = "1.24.2", features = ["macros"] }

[features]
# debug = 1
