# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "perk_solver"
version = "1.5.1"
edition = "2021"
authors = ["Pieter Partous <pieter.partous@outlook.com>"]
description = "Finds optimal material combination for a given gizmo"
repository = "https://github.com/CephHunter/Runescape-perk-solver"
license = "GPL-3.0-or-later"
default-run = "perk_solver_cli"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "perk_solver_cli"
path = "src/main.rs"

[[bin]]
name = "perk_solver_gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
colored = "2.0.0"
derivative = "2.2.0"
derive_more = "0.99.17"
howlong = { version = "0.1.7", optional = true }
iced = { version = "0.8.0", optional = true, features = ["image", "svg", "glow"] }
iced_lazy = { version = "0.5.0", optional = true }
iced_native = { version = "0.9.1", optional = true }
indicatif = "0.17.2"
itertools = "0.10.5"
len-trait = "0.6.1"
num_cpus = "1.15.0"
once_cell = "1.17.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.154", features = ["rc", "derive"] }
serde_json = "1.0.91"
smallvec = "1.10.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.24.3"
threadpool = "1.8.1"
uninit = "0.5.1"

[dev-dependencies]
criterion = "0.4.0"
test-case = "2.2.2"
approx = "0.5.1"

[features]
wiki-template = []
precise-time = ["dep:howlong"]
gui = ["dep:iced", "dep:iced_lazy", "dep:iced_native"]

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "my_benchmark"
harness = false
