# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "perk_solver"
version = "1.8.1"
edition = "2021"
authors = ["Pieter Partous <pieter.partous@outlook.com>"]
description = "Finds optimal material combination for a given gizmo"
repository = "https://github.com/CephHunter/Runescape-perk-solver"
license = "GPL-3.0-or-later"
default-run = "perk_solver_cli"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "perk_solver_cli"
path = "src/main.rs"

[[bin]]
name = "perk_solver_gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
derivative = "2.2.0"
derive_more = "0.99.17"
dioxus = { version = "0.3.2", optional = true }
dioxus-desktop = { version = "0.3.0", optional = true }
form_urlencoded = "1.1.0"
howlong = { version = "0.1.7", optional = true }
indicatif = "0.17.5"
itertools = "0.11.0"
len-trait = "0.6.1"
num_cpus = "1.16.0"
once_cell = "1.18.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.171", features = ["rc", "derive"] }
serde_json = "1.0.100"
smallvec = "1.11.0"
strum = { version = "0.25.0", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.25.1"
threadpool = "1.8.1"
tokio = { version = "1.29.1", optional = true }
uninit = "0.5.1"

[dev-dependencies]
criterion = "0.4.0"
test-case = "2.2.2"
approx = "0.5.1"

[build-dependencies]
winres = "0.1.12"

[features]
wiki-template = []
precise-time = ["dep:howlong"]
gui = ["dep:dioxus", "dep:dioxus-desktop", "dep:tokio"]

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "my_benchmark"
harness = false
